--- a/module-2-challenge-starter-code/css/style.css
+++ b/module-2-challenge-starter-code/css/style.css
@@ -1,12 +1,34 @@
+/* Grid */
+
+
+/* Global Styles */
+
 * {
   box-sizing: border-box;
 }
 
+:root {
+--primary: rgba(68, 88, 119, 1);
+--secondary: rgba(146, 204, 206, 1);
+--tertiary: rgba(49, 52, 61, 1);
+--dark: rgba(28, 29, 33, 1);
+--light: rgba(238, 238, 247, 1);
+}
+
 body {
+ /* display: grid;
+  grid-template-rows: 1fr 2fr 3fr 9fr 2fr;
+  grid-template-areas: "header"
+                      "hero-banner"
+                      "main"
+                      "main"
+                       "main";
+                       */
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 1.5;
+
 }
 
 h1,
@@ -20,4 +42,345 @@ h6 {
 
 p {
   margin: 0;
+  font-size: 0.8rem;
+  margin-left: 5px;
 }
+
+
+/* END OF GLOBAL STYLES */
+
+/* Header */
+header {
+ /* grid-area: "header"; */
+ display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+ align-items: center;
+ background-color: var(--tertiary);
+ justify-content: space-between;
+ align-items: center;
+ height: 5vh;
+ box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
+}
+
+h1 {
+ color: var(--tertiary);
+ background-color: var(--secondary);
+ padding: 5px 1% 5px 6%;
+ font-size: 3vh;
+ line-height: 1;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 5px 5px;
+  color: var(--secondary);
+  margin-right: 16px;
+  background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100% );
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: bottom;
+  transition: all 0.25s ease-in;
+  font-size: 0.6rem;
+}
+
+nav a:hover {
+  background-size: 100% 100%;
+  color: var(--primary);
+}
+
+nav a:last-child {
+  margin-right: 5px;
+}
+
+main {
+  margin-top: 20px;
+  margin-bottom: 45px;
+}
+
+
+    /* Navigation Bar */
+
+
+
+    /* END OF NAVIGATION BAR */
+
+/* END OF HEADER */
+
+/* Hero Banner */
+
+.hero-banner {
+ /* grid-area: "hero-banner"; */
+  
+ background: rgb(30, 110, 240);
+ background-image: url("../images/02-hero-bg.jpg"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
+ background-size: cover;
+ background-position: center;
+ background-blend-mode: soft-light;
+ min-height: 10vh;
+ color: var(--light);
+ padding: 2% 6%;
+ display: flex;
+ justify-content: flex-end;
+ align-items: flex-end;
+ text-align: right;
+ ;
+}
+
+.avatar-wrapper {
+  display: flex;
+  flex-direction: row;
+justify-content: center;
+height: 200px;
+
+
+}
+.avatar {
+  background-image: url("../images/avatar.png");
+  width: 100%;
+background-repeat: no-repeat;
+justify-content: center;
+ background-position: center;
+background-size: 12em;
+  
+}
+
+.hero-banner div {
+  flex: 0 0 90%;
+}
+
+#hero-header {
+background-color: var(--secondary);
+color: var(--tertiary);
+margin: 0;
+padding: 5px 10px;
+font-size: 1.3rem;
+line-height: 1.2;
+display: inline;
+}
+/* END OF HERO BANNER */
+
+/* Main */
+.page-wrapper {
+  max-width: 88%;
+  margin: 0 auto;
+  grid-area: "main";
+  
+  
+  /* display: grid;
+  grid-template-rows: 15fr 37fr 8fr;
+  grid-template-areas: "about"
+                        "work"
+                        "contact";
+  height: 81vh; 
+  */
+
+}
+
+.page-section {
+margin: 25px 0;
+padding: 10px 0;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+align-items: stretch;
+justify-content: center;
+}
+
+.page-section > h2 {
+  flex: 0 0 20%;
+  text-align: right;
+  padding-right: 15px;
+  border-right: 4px solid var(--primary);
+  font-size: 4vw;
+  line-height: 1.1;
+}
+
+.page-section > div {
+  flex: 0 0 77%;
+
+}
+
+.page-section > p {
+  margin-bottom: 20px;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.flex-item {
+  border: 5px solid var(--secondary);
+  background-color: var(--primary);
+  color: var(--tertiary);
+  min-height: 150px;
+  max-height: 150px;
+  flex-basis: calc(50% - 1em);
+  display: flex;
+  align-items: flex-end;
+  padding: 0 0 20px 0;
+  margin: 0.5em;
+  text-decoration: none;
+  background-blend-mode: soft-light;
+  background-size: 150%;
+  transition: all 0.5s;
+  font-size: 0.9rem;
+}
+
+.flex-item:first-child {
+  min-height: 400px;
+  flex-basis: 100%;
+}
+
+.flex-item:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.flex-item div {
+  background-color: var(--secondary);
+}
+
+.flex-item h3 {
+  font-size: 1.6rem;
+}
+
+.contact address {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+
+.contact address a {
+  color: var(--tertiary);
+  padding: 5px;
+  text-decoration: none;
+  font-size: 1.3rem;
+  background-image: linear-gradient(270deg, var(--primary) 0%, var(--primary) 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  position: bottom;
+  transition: all 0.25s ease-in;
+  display: inline-block;
+}
+
+.contact address a:hover {
+  background-size: 100% 88%;
+  color: var(--secondary);
+
+}
+
+.buddy {background-image: url(../images/02-run-buddy.jpg)}
+
+.lego {
+  background-image: url(../images/02-portfolio-1.jpg);
+}
+
+.corgis {
+  background-image: url(../images/02-portfolio-2.jpg)
+}
+
+.bacon {
+  background-image: url(../images/02-portfolio-3.jpg)
+}
+
+.puzzle {
+  background-image: url(../images/02-portfolio-4.jpg);
+}
+
+@media screen and (max-width: 1000px) {
+  header {
+    padding: 0 0 10px 0;
+    justify-content: center; text-align: center;
+  }
+
+  header h1 {
+    width: 30%;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 2vh;
+  }
+
+  header nav {
+    justify-content: right;
+    width: 70%;
+  }
+
+  .page-section > h2, 
+  .page-section > div {
+    flex: 0 0 100%;
+  }
+  .page-section > h2 {
+    border-right: none;
+    border-bottom: 4px solid var(--primary);
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    text-align: left;
+    font-size: 7vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header h1 {
+    width: 30%;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 2vh;
+  }
+
+  header nav {
+    justify-content: center;
+    width: 70%;
+  }
+
+  header nav a {
+    font-size: 1vh;
+  }
+  .flex-item, 
+  .flex-item:first-child{
+    flex-basis: 100%;
+  }
+  .flex-item:first-child{
+    min-height: 150px;
+  }
+
+  .hero-banner {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .contact address {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+/*
+#about {
+  grid-area: "about";
+  background-color: blue;
+
+}
+
+#work {
+  grid-area: "work";
+   display: grid; 
+  background-color: purple
+}
+
+#contact {
+ grid-area: "contact"; 
+background-color: orange;
+}
+
+*/
+
+/* END OF MAIN */
