--- a/module-2-challenge-starter-code/css/style.css
+++ b/module-2-challenge-starter-code/css/style.css
@@ -8,10 +8,10 @@
 }
 
 :root {
---primary: rgba(68, 88, 119, 1);
---secondary: rgba(146, 204, 206, 1);
+--primary: rgb(23, 107, 37);
+--secondary: rgb(162, 207, 90);
 --tertiary: rgba(49, 52, 61, 1);
---dark: rgba(28, 29, 33, 1);
+--dark: rgb(72, 77, 99);
 --light: rgba(238, 238, 247, 1);
 }
 
@@ -42,7 +42,7 @@ h6 {
 
 p {
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 1.5rem;
   margin-left: 5px;
 }
 
@@ -87,7 +87,7 @@ nav a {
   background-size: 100% 0.2em;
   background-position: bottom;
   transition: all 0.25s ease-in;
-  font-size: 0.6rem;
+  font-size: 1rem;
 }
 
 nav a:hover {
@@ -96,7 +96,7 @@ nav a:hover {
 }
 
 nav a:last-child {
-  margin-right: 5px;
+  margin-right: 5vw;
 }
 
 main {
@@ -118,7 +118,7 @@ main {
 .hero-banner {
  /* grid-area: "hero-banner"; */
   
- background: rgb(30, 110, 240);
+ background: rgb(84, 117, 22);
  background-image: url("../images/02-hero-bg.jpg"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
  background-size: cover;
  background-position: center;
@@ -137,7 +137,7 @@ main {
   display: flex;
   flex-direction: row;
 justify-content: center;
-height: 200px;
+height: 250px;
 
 
 }
@@ -147,7 +147,7 @@ height: 200px;
 background-repeat: no-repeat;
 justify-content: center;
  background-position: center;
-background-size: 12em;
+background-size: 16em;
   
 }
 
@@ -282,7 +282,9 @@ justify-content: center;
 .buddy {background-image: url(../images/02-run-buddy.jpg)}
 
 .lego {
-  background-image: url(../images/02-portfolio-1.jpg);
+  background-image: url(../images/seo-page.png);
+  
+  background-size: cover;
 }
 
 .corgis {
@@ -290,7 +292,9 @@ justify-content: center;
 }
 
 .bacon {
-  background-image: url(../images/02-portfolio-3.jpg)
+  background-image: url(../images/study-guide.png);
+  zoom: 70%;
+  background-size: cover;
 }
 
 .puzzle {
@@ -298,6 +302,10 @@ justify-content: center;
 }
 
 @media screen and (max-width: 1000px) {
+
+  p {
+    font-size: 1.2rem;
+  }
   header {
     padding: 0 0 10px 0;
     justify-content: center; text-align: center;
@@ -330,6 +338,10 @@ justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
+
+  p {
+    font-size: 1rem;
+  }
   header h1 {
     width: 30%;
     padding: 5px;
@@ -343,8 +355,9 @@ justify-content: center;
   }
 
   header nav a {
-    font-size: 1vh;
+    font-size: 1.1vh;
   }
+  
   .flex-item, 
   .flex-item:first-child{
     flex-basis: 100%;
